Only using the adapter’s refresh indicator rather than the swipe refresh layout’s. Displaying bus routes in a text view (for now just so we can see that they’re actually being loaded).

--- a/app/src/main/res/layout/cell_bus_stop.xml
+++ b/app/src/main/res/layout/cell_bus_stop.xml
@@ -41,6 +41,12 @@
                 android:layout_height="wrap_content"
                 android:text="@{busStop.distance.direct}"/>
 
+            <TextView
+                android:id="@+id/bus_routes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{busStop.getRoutesFormatted}"/>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
