--- a/app/src/main/res/layout/cell_bus_stop.xml
+++ b/app/src/main/res/layout/cell_bus_stop.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="busStop"
-            type="jessevivanco.com.pegcitytransit.rest.models.BusStop"/>
+            type="jessevivanco.com.pegcitytransit.data.rest.models.BusStop"/>
     </data>
 
     <android.support.v7.widget.CardView
