--- a/app/src/main/res/layout/cell_bus_stop.xml
+++ b/app/src/main/res/layout/cell_bus_stop.xml
@@ -12,8 +12,8 @@
 
     <!-- TODO figure out dimens -->
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="120dp"
+        android:id="@+id/cell_container"
+        android:layout_width="@dimen/bus_stop_card_width"
         android:layout_height="match_parent"
         card_view:cardCornerRadius="@dimen/card_corner_radius"
         card_view:contentPadding="@dimen/material_spacing_small">
@@ -40,12 +40,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{busStop.distance.direct}"/>
-
-            <TextView
-                android:id="@+id/bus_routes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{busStop.getRoutesFormatted}"/>
 
         </LinearLayout>
 
