--- a/app/src/main/res/layout/cell_bus_route.xml
+++ b/app/src/main/res/layout/cell_bus_route.xml
@@ -13,8 +13,8 @@
     <!-- TODO figure out dimens -->
     <android.support.v7.widget.CardView
         android:id="@+id/cell_container"
-        android:layout_width="@dimen/bus_route_cell_width"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         card_view:cardCornerRadius="@dimen/card_corner_radius"
         card_view:contentPadding="@dimen/material_spacing_small">
 
