--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,9 @@
 
     <dimen name="card_corner_radius">2dp</dimen>
 
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_title">20sp</dimen>
+
+    <dimen name="text_bus_route_mini">14sp</dimen>
+    <dimen name="text_bus_route_large">32sp</dimen>
 
 </resources>
