--- a/app/src/main/res/layout/cell_bus_route.xml
+++ b/app/src/main/res/layout/cell_bus_route.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="busRoute"
-            type="jessevivanco.com.pegcitytransit.ui.view_model.BusRouteViewModel"/>
+            type="jessevivanco.com.pegcitytransit.ui.view_models.BusRouteViewModel"/>
     </data>
 
     <android.support.v7.widget.CardView
