--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -4,4 +4,5 @@
     <integer name="default_max_bus_stop_distance">200</integer>
 
     <integer name="default_map_zoom">17</integer>
+    <integer name="default_city_wide_map_zoom">10</integer>
 </resources>
