Using Just a single map fragment (TransitMapFragment) that we can re-use.

--- a/app/src/main/res/layout/fragment_bus_stops_map.xml
+++ b/app/src/main/res/layout/fragment_bus_stops_map.xml
@@ -8,9 +8,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment
-        android:id="@+id/map_fragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
+        android:id="@+id/map_fragment_container"
+        android:name="jessevivanco.com.pegcitytransit.ui.fragments.TransitMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
