--- a/app/src/main/res/layout/activity_bus_route_map.xml
+++ b/app/src/main/res/layout/activity_bus_route_map.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_container"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <fragment
-        android:id="@+id/map_fragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="jessevivanco.com.pegcitytransit.ui.activities.BusRouteMapActivity"/>
-
-</LinearLayout>
+    android:orientation="vertical"/>
