Can fetch schedules for a bus stop. Showing a shitty bottom horizontal list view but I think I’ll remove that and just go to a new screen.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,7 +18,8 @@
     <dimen name="material_spacing_small">8dp</dimen>
     <dimen name="material_spacing_x_small">4dp</dimen>
 
-    <!--<dimen name="bus_route_cell_width">150dp</dimen>-->
+    <dimen name="horizontal_list_cell_width">150dp</dimen>
+    <dimen name="horizontal_list_height">150dp</dimen>
 
     <dimen name="card_corner_radius">2dp</dimen>
 
