Changed the tab names. Some leftover debug code in there that will get pulled out later.

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,12 +3,12 @@
 
     <!--TODO icons-->
     <item
-        android:id="@+id/stops"
-        android:title="@string/stops"/>
+        android:id="@+id/map"
+        android:title="@string/map"/>
 
     <item
-        android:id="@+id/timetables"
-        android:title="@string/timetables"/>
+        android:id="@+id/my_stops"
+        android:title="@string/my_stops"/>
 
     <item
         android:id="@+id/routes"
