--- a/app/src/main/res/layout/cell_scheduled_stop.xml
+++ b/app/src/main/res/layout/cell_scheduled_stop.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cell_container"
-    android:layout_width="@dimen/horizontal_list_cell_width"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:contentPadding="@dimen/material_spacing_small">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <jessevivanco.com.pegcitytransit.ui.views.BusRouteTextView
             android:id="@+id/route_number"
