--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- Default height, but we'll be changing this dynamically anyway. -->
-    <dimen name="default_app_bar_height">200dp</dimen>
+    <dimen name="cover_image_height">200dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
 
@@ -21,10 +21,12 @@
     <dimen name="horizontal_list_cell_width">150dp</dimen>
     <dimen name="horizontal_list_height">150dp</dimen>
 
+    <dimen name="map_cover_image_width">400dp</dimen>
+    <dimen name="map_cover_image_height">400dp</dimen>
+
     <dimen name="card_corner_radius">2dp</dimen>
 
     <dimen name="text_title">20sp</dimen>
-
     <dimen name="text_bus_route_mini">14sp</dimen>
     <dimen name="text_bus_route_large">32sp</dimen>
 
