--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- TODO: tweak this value as we see fit -->
     <integer name="default_max_bus_stop_distance">200</integer>
 
     <integer name="default_city_wide_map_zoom">11</integer>
     <integer name="map_cover_image_zoom">18</integer>
+
+    <integer name="max_relative_minutes">20</integer>
 
 </resources>
