--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <!-- Default height, but we'll be changing this dynamically anyway. -->
     <dimen name="cover_image_height">200dp</dimen>
 
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="stroke_width">1dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="material_spacing_large">24dp</dimen>
