--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="grey_light">#F7F7F6</color>
     <color name="grey">#C9CBCE</color>
+    <color name="text_grey">#5E656D</color>
 
     <color name="spirit_route">#008000</color>
     <color name="normal_route">@color/white</color>
