--- a/app/src/main/res/layout/cell_scheduled_stop.xml
+++ b/app/src/main/res/layout/cell_scheduled_stop.xml
@@ -68,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:textAllCaps="true"
                 android:textSize="@dimen/text_title"
                 tools:ignore="MissingPrefix"/>
 
