--- a/app/src/main/res/layout/fragment_bus_routes.xml
+++ b/app/src/main/res/layout/fragment_bus_routes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_container"
     android:layout_width="match_parent"
@@ -11,4 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+    <include
+        layout="@layout/view_loading"/>
+
+</FrameLayout>
