--- a/app/src/main/res/layout/fragment_bus_stops_map.xml
+++ b/app/src/main/res/layout/fragment_bus_stops_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,40 +11,18 @@
     <FrameLayout
         android:id="@+id/map_fragment_container"
         android:name="jessevivanco.com.pegcitytransit.ui.fragments.TransitMapFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:context="jessevivanco.com.pegcitytransit.ui.activities.MainActivity"/>
 
-    <!-- TODO should probably use weights instead of static height value -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/bus_stop_schedule_recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/horizontal_list_height"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <com.joanzapata.iconify.widget.IconButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/refresh_bus_stops"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="{md-search}"
-        app:layout_constraintBottom_toTopOf="@+id/bus_stop_schedule_recycler_view"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_gravity="bottom|end"
+        app:srcCompat="@drawable/ic_search_white_24dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
