--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,5 +29,6 @@
     <dimen name="text_title">20sp</dimen>
     <dimen name="text_bus_route_mini">14sp</dimen>
     <dimen name="text_bus_route_large">32sp</dimen>
+    <dimen name="text_loading">24sp</dimen>
 
 </resources>
