--- a/app/src/main/res/layout/fragment_bus_stops_map.xml
+++ b/app/src/main/res/layout/fragment_bus_stops_map.xml
@@ -15,14 +15,28 @@
         android:layout_height="match_parent"
         tools:context="jessevivanco.com.pegcitytransit.ui.activities.MainActivity"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/refresh_bus_stops"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_gravity="bottom|end"
-        app:srcCompat="@drawable/ic_search_white_24dp"/>
+        android:layout_marginBottom="@dimen/material_spacing_medium"
+        android:layout_marginEnd="@dimen/material_spacing_medium"
+        android:layout_marginRight="@dimen/material_spacing_medium"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/view_schedule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_event_note_white_24dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/refresh_bus_stops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/material_spacing_medium"
+            app:srcCompat="@drawable/ic_search_white_24dp"/>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
