--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,8 @@
     <dimen name="map_cover_image_width">400dp</dimen>
     <dimen name="map_cover_image_height">400dp</dimen>
 
+    <dimen name="map_search_border_width">@dimen/material_spacing_small</dimen>
+
     <dimen name="card_corner_radius">2dp</dimen>
 
     <dimen name="text_title">20sp</dimen>
