--- a/app/src/main/res/layout/fragment_bus_stops_map.xml
+++ b/app/src/main/res/layout/fragment_bus_stops_map.xml
@@ -42,4 +42,23 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/stop_schedule_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+
+        android:orientation="vertical"
+
+        app:behavior_hideable="true"
+        app:behavior_skipCollapsed="false"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/stop_schedule_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </FrameLayout>
+
 </android.support.design.widget.CoordinatorLayout>
