--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activities.MainActivity">
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/content"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/root_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/tab_navigation"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/map_fragment_container"
+            android:name="jessevivanco.com.pegcitytransit.ui.fragments.TransitMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="jessevivanco.com.pegcitytransit.ui.activities.MainActivity"/>
+
+        <!-- This button is hidden until we have access to the user's location. -->
+        <!-- NOTE: Bottom margin = fab_height + material_spacing_medium -->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/my_location_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="88dp"
+            android:layout_marginEnd="@dimen/material_spacing_medium"
+            android:layout_marginRight="@dimen/material_spacing_medium"
+            app:backgroundTint="@color/white"
+            app:layout_anchor="@id/map_fragment_container"
+            app:layout_anchorGravity="bottom|right|end"
+            app:srcCompat="@drawable/ic_my_location_grey_800_24dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/refresh_bus_stops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/material_spacing_medium"
+            android:layout_marginEnd="@dimen/material_spacing_medium"
+            android:layout_marginRight="@dimen/material_spacing_medium"
+            app:layout_anchor="@id/map_fragment_container"
+            app:layout_anchorGravity="bottom|right|end"
+            app:srcCompat="@drawable/ic_refresh_white_24dp"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+        android:id="@+id/tab_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
+        android:layout_height="@dimen/bottom_tabs_height"
+        android:layout_alignParentBottom="true"
         app:menu="@menu/navigation"/>
 
-</LinearLayout>
+</RelativeLayout>
+
