--- a/app/src/main/res/layout/fragment_transit_map.xml
+++ b/app/src/main/res/layout/fragment_transit_map.xml
@@ -2,7 +2,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,6 +12,7 @@
         android:layout_height="match_parent"
         tools:context="jessevivanco.com.pegcitytransit.ui.activities.MapsActivity"/>
 
+    <!-- This is just an overlaid cross hair in the middle of the map -->
     <View
         android:layout_width="@dimen/material_spacing_small"
         android:layout_height="@dimen/material_spacing_small"
