--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,9 @@
     <dimen name="map_cover_image_width">400dp</dimen>
     <dimen name="map_cover_image_height">400dp</dimen>
 
+    <dimen name="fab_size">56dp</dimen>
+    <dimen name="bottom_tabs_height">50dp</dimen>
+
     <dimen name="map_search_border_width">@dimen/material_spacing_small</dimen>
 
     <dimen name="card_corner_radius">2dp</dimen>
