--- a/app/src/main/res/layout/cell_bus_stop_info.xml
+++ b/app/src/main/res/layout/cell_bus_stop_info.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cell_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,7 +8,6 @@
     <jessevivanco.com.pegcitytransit.ui.views.BusStopInfoView
         android:id="@+id/bus_stop_info_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:widget_size="large"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
