--- a/app/src/main/res/layout/bottom_sheet_schedule.xml
+++ b/app/src/main/res/layout/bottom_sheet_schedule.xml
@@ -1,15 +1,7 @@
-<android.support.design.widget.CoordinatorLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bottom_sheet_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/list_background"
-    android:fitsSystemWindows="true"
-    app:behavior_hideable="true"
-    app:behavior_skipCollapsed="true"
-    app:layout_behavior="@string/bottom_sheet_behavior">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -92,4 +84,4 @@
 
     </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</merge>
