--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -6,5 +6,6 @@
     <integer name="map_cover_image_zoom">18</integer>
 
     <integer name="max_relative_minutes">20</integer>
+    <integer name="marker_visibility_delay_millis">50</integer>
 
 </resources>
