--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--TODO icons-->
     <item
-        android:id="@+id/map"
-        android:title="@string/map"/>
+        android:id="@+id/search"
+        android:title="@string/search"/>
 
     <item
         android:id="@+id/my_stops"
