--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
-        android:title="@string/search"/>
+        android:title="@string/search_stops"/>
 
     <item
         android:id="@+id/my_stops"
